Corrected petsc version for saddle point problems

--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -217,6 +217,7 @@ if( test_all_C_models )
 	endif( SOLVERLAB_WITH_MPI )
 endif( test_all_C_models )
 
-if( PETSc_VERSION VERSION_GREATER "3.18" )
+if( PETSC_VERSION VERSION_GREATER 3.18 )
+  message(STATUS "PETSC version greater than 3.18 -> Compile saddle point tests.")
   add_subdirectory (SaddlePointPreconditioner)
-endif( PETSc_VERSION VERSION_GREATER "3.18" )
+endif( PETSC_VERSION VERSION_GREATER 3.18 )
