Updating saddle point tests

--- a/CoreFlows/examples/C/SaddlePointPreconditioner/CMakeLists.txt
+++ b/CoreFlows/examples/C/SaddlePointPreconditioner/CMakeLists.txt
@@ -24,7 +24,7 @@ install(TARGETS SaddlePointLinearSolver.exe DESTINATION share/examples)
     SET(MATRIX_FILE  Matrices/Kershaw2D_PolyMAC_1.petsc  )
     SET(nu  612  )
     SET(np  289  )
-add_test(NAME SaddlePointLinearSolver_2DKershaw_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view  )     
+add_test(NAME SaddlePointLinearSolver_2DKershaw_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -on_error_attach_debugger  )     
 set_property (TEST SaddlePointLinearSolver_2DKershaw_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
  
     SET(MATRIX_FILE  Matrices/Cartesian_PolyMAC_1.petsc  )
@@ -36,19 +36,19 @@ set_property (TEST SaddlePointLinearSolver_2DCartesian_schur.exe PROPERTY LABELS
     SET(MATRIX_FILE  Matrices/Tetra_PolyMAC_1.petsc  )
     SET(nu  500  )
     SET(np  215  )
-add_test(NAME SaddlePointLinearSolver_3DTetra_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view)     
+add_test(NAME SaddlePointLinearSolver_3DTetra_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu )     
 set_property (TEST SaddlePointLinearSolver_3DTetra_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
 
     SET(MATRIX_FILE  Matrices/Hexa_PolyMAC_1.petsc  )
     SET(nu  36  )
     SET(np  8  )
-add_test(NAME SaddlePointLinearSolver_3DHexa_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view)     
+add_test(NAME SaddlePointLinearSolver_3DHexa_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu )     
 set_property (TEST SaddlePointLinearSolver_3DHexa_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
 
     SET(MATRIX_FILE  Matrices/Kershaw_PolyMAC_1.petsc  )
     SET(nu  1728  )
     SET(np  512  )
-add_test(NAME SaddlePointLinearSolver_3DKershaw_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view)     
+add_test(NAME SaddlePointLinearSolver_3DKershaw_schur.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu )     
 set_property (TEST SaddlePointLinearSolver_3DKershaw_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
 
 ###### Second version of the saddle point preconditoner (with Shat)
@@ -59,7 +59,7 @@ install(TARGETS SaddlePointLinearSolver_Shat.exe DESTINATION share/examples)
     SET(MATRIX_FILE  Matrices/Kershaw2D_PolyMAC_1.petsc  )
     SET(nu  612  )
     SET(np  289  )
-add_test(NAME SaddlePointLinearSolver_2DKershaw_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view)     
+add_test(NAME SaddlePointLinearSolver_2DKershaw_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -on_error_attach_debugger)     
 set_property (TEST SaddlePointLinearSolver_2DKershaw_Shat_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
  
     SET(MATRIX_FILE  Matrices/Cartesian_PolyMAC_1.petsc  )
@@ -71,19 +71,19 @@ set_property (TEST SaddlePointLinearSolver_2DCartesian_Shat_schur.exe PROPERTY L
     SET(MATRIX_FILE  Matrices/Tetra_PolyMAC_1.petsc  )
     SET(nu  500  )
     SET(np  215  )
-add_test(NAME SaddlePointLinearSolver_3DTetra_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view)     
+add_test(NAME SaddlePointLinearSolver_3DTetra_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu )     
 set_property (TEST SaddlePointLinearSolver_3DTetra_Shat_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
 
     SET(MATRIX_FILE  Matrices/Hexa_PolyMAC_1.petsc  )
     SET(nu  36  )
     SET(np  8  )
-add_test(NAME SaddlePointLinearSolver_3DHexa_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view)     
+add_test(NAME SaddlePointLinearSolver_3DHexa_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu )     
 set_property (TEST SaddlePointLinearSolver_3DHexa_Shat_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
 
     SET(MATRIX_FILE  Matrices/Kershaw_PolyMAC_1.petsc  )
     SET(nu  1728  )
     SET(np  512  )
-add_test(NAME SaddlePointLinearSolver_3DKershaw_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu -log_view)     
+add_test(NAME SaddlePointLinearSolver_3DKershaw_Shat_schur.exe         COMMAND "./SaddlePointLinearSolver_Shat.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu )     
 set_property (TEST SaddlePointLinearSolver_3DKershaw_Shat_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
 
 
@@ -95,7 +95,7 @@ install(TARGETS SaddlePointLinearSolver_par.exe DESTINATION share/examples)
     SET(MATRIX_FILE  Matrices/Kershaw2D_PolyMAC_1.petsc  )
     SET(nu  612  )
     SET(np  289  )
-add_test(NAME SaddlePointLinearSolver_2DKershaw_par_schur.exe         COMMAND "./SaddlePointLinearSolver_par.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type upper -fieldsplit_1_ksp_type gmres -fieldsplit_1_pc_type gamg -fieldsplit_1_pc_gamg_type agg -fieldsplit_0_ksp_type preonly -fieldsplit_0_pc_type lu )     
+add_test(NAME SaddlePointLinearSolver_2DKershaw_par_schur.exe         COMMAND "./SaddlePointLinearSolver_par.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type upper -fieldsplit_1_ksp_type gmres -fieldsplit_1_pc_type gamg -fieldsplit_1_pc_gamg_type agg -fieldsplit_0_ksp_type preonly -fieldsplit_0_pc_type lu -on_error_attach_debugger)     
 set_property (TEST SaddlePointLinearSolver_2DKershaw_par_schur.exe PROPERTY LABELS "C++ PETSC multigrid")     
  
     if( SOLVERLAB_WITH_MPI )#Tests parallèles
