ajout convection ok : code compile -> gérer gradient pression, coefficient de diffusion, loi d'état ... et ?

--- a/CoreFlows/Models/inc/CMakeLists.txt
+++ b/CoreFlows/Models/inc/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(include_models_HXX
     TransportEquation.hxx
     DiffusionEquation.hxx
     WaveStaggered.hxx
+    EulerBarotropicStaggered.hxx
     StationaryDiffusionEquation.hxx
     LinearElasticityModel.hxx
     ProblemFluid.hxx
