ajout cas test Riemann 1d Euler baro

--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -148,6 +148,9 @@ CreateTestExecAndInstall(WaveStaggered/WaveStaggered_1DRiemannProblem.cxx  "${li
 CreateTestExecAndInstall(WaveStaggered/WaveStaggered_2DCylinderDeflection.cxx  "${libs_for_tests}" "C++ fv Wave Staggerd structured coreflows" )
 CreateTestExecAndInstall(WaveStaggered/WaveStaggered_2DRiemann_StructuredSquares.cxx  "${libs_for_tests}" "C++ fv Wave Staggerd structured coreflows" )
 
+################### Euler Barotropic staggered
+CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_1DRiemannProblem.cxx  "${libs_for_tests}" "C++ fv Wave Staggerd structured coreflows" )
+
 if( SOLVERLAB_WITH_MPI )#Tests parallèles
   add_executable(MEDCouplingSendRecvFieldSameMesh_MPI.exe MEDCouplingSendRecvFieldSameMesh_MPI.cxx)
   target_link_libraries(MEDCouplingSendRecvFieldSameMesh_MPI.exe ${MPI_LIBRARY} medcoupling medloader paramedmem)
