pb sol exacte ou plateaux sol numériques pas bons ?

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -167,6 +167,7 @@ CreatePythonTest(WaveStaggered/WaveStaggered_2DCylinderMeshConvergence.py "Pytho
 CreatePythonTest(EulerBarotropicStaggered/EulerBarotropicStaggered_1DDecoupledTransport.py "Python fv Wave staggered 2D Riemann X structured coreflows")
 CreatePythonTest(EulerBarotropicStaggered/EulerBarotropicStaggered_1DRiemannProblem.py "Python fv Wave staggered 2D Riemann X structured coreflows")
 CreatePythonTest(EulerBarotropicStaggered/exact_rs_stiffenedgas.py "Python fv Wave staggered 2D Riemann X structured coreflows")
+CreatePythonTest(EulerBarotropicStaggered/exact_rs_stiffenedgas_isentropic.py "Python fv Wave staggered 2D Riemann X structured coreflows")
 
 
 if( SOLVERLAB_WITH_MPI )
