--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -152,6 +152,7 @@ CreateTestExecAndInstall(WaveStaggered/WaveStaggered_2DRiemann_StructuredSquares
 CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_1DRiemannProblem.cxx  "${libs_for_tests}" "C++ fv Euler barotropic Staggered 1d coreflows" )
 CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DRiemann_StructuredSquares.cxx  "${libs_for_tests}" "C++ fv Eulerbarotropic Staggered structured coreflows" )
 CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DCylinderDeflection.cxx  "${libs_for_tests}" "C++ fv Euler barotropic Staggered 2d cylinder coreflows" )
+CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DWall_StructuredSquares.cxx  "${libs_for_tests}" "C++ fv Eulerbarotropic Staggered structured coreflows" )
 
 if( SOLVERLAB_WITH_MPI )#Tests parallèles
   add_executable(MEDCouplingSendRecvFieldSameMesh_MPI.exe MEDCouplingSendRecvFieldSameMesh_MPI.cxx)
